@@ -105,11 +105,13 @@ import org.apache.pinot.common.lineage.SegmentLineageAccessHelper;
 import org.apache.pinot.common.lineage.SegmentLineageUtils;
 import org.apache.pinot.common.messages.ApplicationQpsQuotaRefreshMessage;
 import org.apache.pinot.common.messages.DatabaseConfigRefreshMessage;
+import org.apache.pinot.common.messages.LogicalTableConfigRefreshMessage;
 import org.apache.pinot.common.messages.RoutingTableRebuildMessage;
 import org.apache.pinot.common.messages.RunPeriodicTaskMessage;
 import org.apache.pinot.common.messages.SegmentRefreshMessage;
 import org.apache.pinot.common.messages.SegmentReloadMessage;
 import org.apache.pinot.common.messages.TableConfigRefreshMessage;
+import org.apache.pinot.common.messages.TableConfigSchemaRefreshMessage;
 import org.apache.pinot.common.messages.TableDeletionMessage;
 import org.apache.pinot.common.metadata.ZKMetadataProvider;
 import org.apache.pinot.common.metadata.controllerjob.ControllerJobType;
@@ -127,6 +129,7 @@ import org.apache.pinot.common.utils.BcryptUtils;
 import org.apache.pinot.common.utils.DatabaseUtils;
 import org.apache.pinot.common.utils.HashUtil;
 import org.apache.pinot.common.utils.LLCSegmentName;
+import org.apache.pinot.common.utils.LogicalTableConfigUtils;
 import org.apache.pinot.common.utils.config.AccessControlUserConfigUtils;
 import org.apache.pinot.common.utils.config.InstanceUtils;
 import org.apache.pinot.common.utils.config.TableConfigUtils;
@@ -540,19 +543,22 @@ public class PinotHelixResourceManager {
   }
 
   @Nullable
-  private String getBrokerTenantName(String tableName) {
-    TableConfig offlineTableConfig = ZKMetadataProvider.getOfflineTableConfig(_propertyStore, tableName);
+  private String getBrokerTenantName(String physicalOrLogicalTableName) {
+    TableConfig offlineTableConfig =
+        ZKMetadataProvider.getOfflineTableConfig(_propertyStore, physicalOrLogicalTableName);
     if (offlineTableConfig != null) {
       return offlineTableConfig.getTenantConfig().getBroker();
     }
 
-    TableConfig realtimeTableConfig = ZKMetadataProvider.getRealtimeTableConfig(_propertyStore, tableName);
+    TableConfig realtimeTableConfig =
+        ZKMetadataProvider.getRealtimeTableConfig(_propertyStore, physicalOrLogicalTableName);
     if (realtimeTableConfig != null) {
       return realtimeTableConfig.getTenantConfig().getBroker();
     }
 
     // If the table is not found, check if it is a logical table
-    LogicalTableConfig logicalTableConfig = ZKMetadataProvider.getLogicalTableConfig(_propertyStore, tableName);
+    LogicalTableConfig logicalTableConfig =
+        ZKMetadataProvider.getLogicalTableConfig(_propertyStore, physicalOrLogicalTableName);
     if (logicalTableConfig != null) {
       return logicalTableConfig.getBrokerTenant();
     }
@@ -899,6 +905,17 @@ public class PinotHelixResourceManager {
     tableName = DatabaseUtils.translateTableName(tableName, databaseName, _tableCache.isIgnoreCase());
     String actualTableName = _tableCache.getActualTableName(tableName);
     return actualTableName != null ? actualTableName : tableName;
+  }
+
+  /**
+   * Given a logical table name in any case, returns the logical table name as defined in Helix/Segment/Schema
+   * @param logicalTableName logical tableName in any case.
+   * @return logicalTableName actually defined in Pinot (matches case) and exists ,else, return the input value
+   */
+  public String getActualLogicalTableName(String logicalTableName, @Nullable String databaseName) {
+    logicalTableName = DatabaseUtils.translateTableName(logicalTableName, databaseName, _tableCache.isIgnoreCase());
+    String actualTableName = _tableCache.getActualLogicalTableName(logicalTableName);
+    return actualTableName != null ? actualTableName : logicalTableName;
   }
 
   /**
@@ -1569,13 +1586,27 @@ public class PinotHelixResourceManager {
     }
 
     updateSchema(schema, oldSchema, forceTableSchemaUpdate);
-
-    if (reload) {
-      LOGGER.info("Reloading tables with name: {}", schemaName);
+    try {
       List<String> tableNamesWithType = getExistingTableNamesWithType(schemaName, null);
-      for (String tableNameWithType : tableNamesWithType) {
-        reloadAllSegments(tableNameWithType, false, null);
+      if (reload) {
+        LOGGER.info("Reloading tables with name: {}", schemaName);
+        for (String tableNameWithType : tableNamesWithType) {
+          reloadAllSegments(tableNameWithType, false, null);
+        }
+      } else {
+        // Send schema refresh message to all tables that use this schema
+        for (String tableNameWithType : tableNamesWithType) {
+          LOGGER.info("Sending updated schema message for table: {}", tableNameWithType);
+          sendTableConfigSchemaRefreshMessage(tableNameWithType, getServerInstancesForTable(tableNameWithType,
+              TableNameBuilder.getTableTypeFromTableName(tableNameWithType)));
+        }
       }
+    } catch (TableNotFoundException e) {
+      if (reload) {
+        throw e;
+      }
+      // We don't throw exception if no tables found for schema when reload is false. Since this could be valid case
+      LOGGER.warn("No tables found for schema (refresh only): {}", schemaName, e);
     }
   }
 
@@ -1649,10 +1680,29 @@ public class PinotHelixResourceManager {
     return ZKMetadataProvider.getTableSchema(_propertyStore, tableConfig);
   }
 
+  /**
+   * Get all schema names in the cluster across all databases.
+   * @return List of schema names
+   */
+  public List<String> getAllSchemaNames() {
+    return _propertyStore.getChildNames(
+        PinotHelixPropertyStoreZnRecordProvider.forSchema(_propertyStore).getRelativePath(), AccessOption.PERSISTENT
+    );
+  }
+
+  /**
+   * Get all schema names in the cluster for default database.
+   * @return List of schema names
+   */
   public List<String> getSchemaNames() {
     return getSchemaNames(null);
   }
 
+  /**
+   * Get all schema names in the cluster for a given database.
+   * @param databaseName Database name to filter schema names
+   * @return List of schema names
+   */
   public List<String> getSchemaNames(@Nullable String databaseName) {
     List<String> schemas = _propertyStore.getChildNames(
         PinotHelixPropertyStoreZnRecordProvider.forSchema(_propertyStore).getRelativePath(), AccessOption.PERSISTENT);
@@ -1745,6 +1795,12 @@ public class PinotHelixResourceManager {
           + " already exists. If this is unexpected, try deleting the table to remove all metadata associated"
           + " with it.");
     }
+
+    String rawTableName = TableNameBuilder.extractRawTableName(tableNameWithType);
+    if (ZKMetadataProvider.isLogicalTableExists(_propertyStore, rawTableName)) {
+      throw new TableAlreadyExistsException("Logical table '" + rawTableName
+          + "' already exists. Please use a different name for the physical table.");
+    }
     if (_helixAdmin.getResourceExternalView(_helixClusterName, tableNameWithType) != null) {
       throw new TableAlreadyExistsException("External view for " + tableNameWithType
           + " still exists. If the table is just deleted, please wait for the clean up to finish before recreating it. "
@@ -1765,7 +1821,7 @@ public class PinotHelixResourceManager {
             _enableBatchMessageMode);
     TableType tableType = tableConfig.getTableType();
     // Ensure that table is not created if schema is not present
-    if (ZKMetadataProvider.getSchema(_propertyStore, TableNameBuilder.extractRawTableName(tableNameWithType)) == null) {
+    if (ZKMetadataProvider.getSchema(_propertyStore, rawTableName) == null) {
       throw new InvalidTableConfigException("No schema defined for table: " + tableNameWithType);
     }
     Preconditions.checkState(tableType == TableType.OFFLINE || tableType == TableType.REALTIME,
@@ -1825,16 +1881,20 @@ public class PinotHelixResourceManager {
     String tableName = logicalTableConfig.getTableName();
     LOGGER.info("Adding logical table {}: Start", tableName);
 
+    validateLogicalTableConfig(logicalTableConfig);
+
     // Check if the logical table name is already used
     if (ZKMetadataProvider.isLogicalTableExists(_propertyStore, tableName)) {
       throw new TableAlreadyExistsException("Logical table: " + tableName + " already exists");
     }
 
     // Check if the table name is already used by a physical table
-    getAllTables().stream().map(TableNameBuilder::extractRawTableName).distinct().filter(tableName::equals)
-        .findFirst().ifPresent(tableNameWithType -> {
-          throw new TableAlreadyExistsException("Table name: " + tableName + " already exists");
-        });
+    PinotHelixPropertyStoreZnRecordProvider pinotHelixPropertyStoreZnRecordProvider =
+        PinotHelixPropertyStoreZnRecordProvider.forTable(_propertyStore);
+    if (pinotHelixPropertyStoreZnRecordProvider.exist(TableNameBuilder.OFFLINE.tableNameWithType(tableName))
+        || pinotHelixPropertyStoreZnRecordProvider.exist(TableNameBuilder.REALTIME.tableNameWithType(tableName))) {
+      throw new TableAlreadyExistsException("Table name: " + tableName + " already exists");
+    }
 
     LOGGER.info("Adding logical table {}: Creating logical table config in the property store", tableName);
     ZKMetadataProvider.setLogicalTableConfig(_propertyStore, logicalTableConfig);
@@ -2102,15 +2162,22 @@ public class PinotHelixResourceManager {
     String tableName = logicalTableConfig.getTableName();
     LOGGER.info("Updating logical table {}: Start", tableName);
 
-    if (!ZKMetadataProvider.isLogicalTableExists(_propertyStore, tableName)) {
+    validateLogicalTableConfig(logicalTableConfig);
+
+    LogicalTableConfig oldLogicalTableConfig = ZKMetadataProvider.getLogicalTableConfig(_propertyStore, tableName);
+    if (oldLogicalTableConfig == null) {
       throw new TableNotFoundException("Logical table: " + tableName + " does not exist");
     }
 
     LOGGER.info("Updating logical table {}: Updating logical table config in the property store", tableName);
     ZKMetadataProvider.setLogicalTableConfig(_propertyStore, logicalTableConfig);
 
-    LOGGER.info("Updating logical table {}: Updating BrokerResource for table", tableName);
-    updateBrokerResourceForLogicalTable(logicalTableConfig, tableName);
+    if (!oldLogicalTableConfig.getBrokerTenant().equals(logicalTableConfig.getBrokerTenant())) {
+      LOGGER.info("Updating logical table {}: Updating BrokerResource for table", tableName);
+      updateBrokerResourceForLogicalTable(logicalTableConfig, tableName);
+    }
+
+    sendLogicalTableConfigRefreshMessage(logicalTableConfig.getTableName());
 
     LOGGER.info("Updated logical table {}: Successfully updated table", tableName);
   }
@@ -2124,6 +2191,19 @@ public class PinotHelixResourceManager {
           .put(tableName, SegmentAssignmentUtils.getInstanceStateMap(brokers, BrokerResourceStateModel.ONLINE));
       return is;
     });
+  }
+
+  private void validateLogicalTableConfig(LogicalTableConfig logicalTableConfig) {
+    if (StringUtils.isEmpty(logicalTableConfig.getBrokerTenant())) {
+      logicalTableConfig.setBrokerTenant("DefaultTenant");
+    }
+
+    LogicalTableConfigUtils.validateLogicalTableConfig(
+        logicalTableConfig,
+        PinotHelixPropertyStoreZnRecordProvider.forTable(_propertyStore)::exist,
+        getAllBrokerTenantNames()::contains,
+        _propertyStore
+    );
   }
 
   /**
@@ -2313,8 +2393,25 @@ public class PinotHelixResourceManager {
     return ZKMetadataProvider.getLogicalTableConfig(_propertyStore, tableName);
   }
 
+  /**
+   * Returns all logical table names in the cluster regardless of their database name.
+   * @return List of logical table names
+   */
   public List<String> getAllLogicalTableNames() {
-    return ZKMetadataProvider.getAllLogicalTableConfigs(_propertyStore).stream().map(LogicalTableConfig::getTableName)
+    List<String> logicalTableNames = _propertyStore.getChildNames(
+        PinotHelixPropertyStoreZnRecordProvider.forLogicalTable(_propertyStore).getRelativePath(),
+        AccessOption.PERSISTENT);
+    return logicalTableNames != null ? logicalTableNames : Collections.emptyList();
+  }
+
+  /**
+   * Returns all logical table names in the cluster that belong to the given database.
+   * @param databaseName The name of the database
+   * @return List of logical table names that belong to the given database
+   */
+  public List<String> getAllLogicalTableNames(String databaseName) {
+    return getAllLogicalTableNames().stream()
+        .filter(tableName -> DatabaseUtils.isPartOfDatabase(tableName, databaseName))
         .collect(Collectors.toList());
   }
 
@@ -2494,56 +2591,52 @@ public class PinotHelixResourceManager {
 
   @VisibleForTesting
   public void addNewSegment(String tableNameWithType, SegmentMetadata segmentMetadata, String downloadUrl) {
+    TableConfig tableConfig = getTableConfig(tableNameWithType);
+    Preconditions.checkState(tableConfig != null, "Failed to find table config for table: " + tableNameWithType);
+
     // NOTE: must first set the segment ZK metadata before assigning segment to instances because segment assignment
     // might need them to determine the partition of the segment, and server will need them to download the segment
     SegmentZKMetadata segmentZKMetadata =
         SegmentZKMetadataUtils.createSegmentZKMetadata(tableNameWithType, segmentMetadata, downloadUrl, null, -1);
-    ZNRecord znRecord = segmentZKMetadata.toZNRecord();
+
+    // Update segment tier to support direct assignment for multiple data directories
+    if (needTieredSegmentAssignment(tableConfig)) {
+      updateSegmentTargetTier(tableNameWithType, segmentZKMetadata, getSortedTiers(tableConfig));
+    }
 
     String segmentName = segmentMetadata.getName();
-    String segmentZKMetadataPath =
-        ZKMetadataProvider.constructPropertyStorePathForSegment(tableNameWithType, segmentName);
-    Preconditions.checkState(_propertyStore.set(segmentZKMetadataPath, znRecord, AccessOption.PERSISTENT),
-        "Failed to set segment ZK metadata for table: " + tableNameWithType + ", segment: " + segmentName);
+    Preconditions.checkState(createSegmentZkMetadata(tableNameWithType, segmentZKMetadata),
+        "Failed to create ZK metadata for table: " + tableNameWithType + ", segment: " + segmentName);
     LOGGER.info("Added segment: {} of table: {} to property store", segmentName, tableNameWithType);
 
-    assignTableSegment(tableNameWithType, segmentName);
+    assignSegment(tableConfig, segmentZKMetadata);
   }
 
-  public void assignTableSegment(String tableNameWithType, String segmentName) {
-    String segmentZKMetadataPath =
-        ZKMetadataProvider.constructPropertyStorePathForSegment(tableNameWithType, segmentName);
+  public boolean needTieredSegmentAssignment(TableConfig tableConfig) {
+    return _enableTieredSegmentAssignment && CollectionUtils.isNotEmpty(tableConfig.getTierConfigsList());
+  }
+
+  public List<Tier> getSortedTiers(TableConfig tableConfig) {
+    return TierConfigUtils.getSortedTiersForStorageType(tableConfig.getTierConfigsList(),
+        TierFactory.PINOT_SERVER_STORAGE_TYPE);
+  }
+
+  public void assignSegment(TableConfig tableConfig, SegmentZKMetadata segmentZKMetadata) {
+    String tableNameWithType = tableConfig.getTableName();
+    String segmentName = segmentZKMetadata.getSegmentName();
 
     // Assign instances for the segment and add it into IdealState
     try {
-      TableConfig tableConfig = getTableConfig(tableNameWithType);
-      Preconditions.checkState(tableConfig != null, "Failed to find table config for table: " + tableNameWithType);
-
-      Map<InstancePartitionsType, InstancePartitions> instancePartitionsMap =
-          fetchOrComputeInstancePartitions(tableNameWithType, tableConfig);
-
-      // Initialize tier information only in case direct tier assignment is configured
-      if (_enableTieredSegmentAssignment && CollectionUtils.isNotEmpty(tableConfig.getTierConfigsList())) {
-        List<Tier> sortedTiers = TierConfigUtils.getSortedTiersForStorageType(tableConfig.getTierConfigsList(),
-            TierFactory.PINOT_SERVER_STORAGE_TYPE, _helixZkManager);
-
-        // Update segment tier to support direct assignment for multiple data directories
-        updateSegmentTargetTier(tableNameWithType, segmentName, sortedTiers);
-
-        InstancePartitions tierInstancePartitions =
-            TierConfigUtils.getTieredInstancePartitionsForSegment(tableConfig, segmentName, sortedTiers,
-                _helixZkManager);
-        if (tierInstancePartitions != null && TableNameBuilder.isOfflineTableResource(tableNameWithType)) {
-          // Override instance partitions for offline table
-          LOGGER.info("Overriding with tiered instance partitions: {} for segment: {} of table: {}",
-              tierInstancePartitions, segmentName, tableNameWithType);
-          instancePartitionsMap = Collections.singletonMap(InstancePartitionsType.OFFLINE, tierInstancePartitions);
-        }
+      Map<InstancePartitionsType, InstancePartitions> instancePartitionsMap;
+      // TODO: Support direct tier assignment for UPLOADED real-time segments
+      if (TableNameBuilder.isOfflineTableResource(tableNameWithType)) {
+        instancePartitionsMap = getInstacePartitionsMap(tableConfig, segmentZKMetadata.getTier());
+      } else {
+        instancePartitionsMap = fetchOrComputeInstancePartitions(tableNameWithType, tableConfig);
       }
 
       SegmentAssignment segmentAssignment =
           SegmentAssignmentFactory.getSegmentAssignment(_helixZkManager, tableConfig, _controllerMetrics);
-      Map<InstancePartitionsType, InstancePartitions> finalInstancePartitionsMap = instancePartitionsMap;
       HelixHelper.updateIdealState(_helixZkManager, tableNameWithType, idealState -> {
         assert idealState != null;
         Map<String, Map<String, String>> currentAssignment = idealState.getRecord().getMapFields();
@@ -2552,7 +2645,7 @@ public class PinotHelixResourceManager {
               tableNameWithType);
         } else {
           List<String> assignedInstances =
-              segmentAssignment.assignSegment(segmentName, currentAssignment, finalInstancePartitionsMap);
+              segmentAssignment.assignSegment(segmentName, currentAssignment, instancePartitionsMap);
           LOGGER.info("Assigning segment: {} to instances: {} for table: {}", segmentName, assignedInstances,
               tableNameWithType);
           currentAssignment.put(segmentName,
@@ -2565,7 +2658,7 @@ public class PinotHelixResourceManager {
       LOGGER.error(
           "Caught exception while adding segment: {} to IdealState for table: {}, deleting segment ZK metadata",
           segmentName, tableNameWithType, e);
-      if (_propertyStore.remove(segmentZKMetadataPath, AccessOption.PERSISTENT)) {
+      if (removeSegmentZKMetadata(tableNameWithType, segmentName)) {
         LOGGER.info("Deleted segment ZK metadata for segment: {} of table: {}", segmentName, tableNameWithType);
       } else {
         LOGGER.error("Failed to deleted segment ZK metadata for segment: {} of table: {}", segmentName,
@@ -2575,55 +2668,64 @@ public class PinotHelixResourceManager {
     }
   }
 
-  // Assign a list of segments in batch mode
-  public void assignTableSegments(String tableNameWithType, List<String> segmentNames) {
-    Map<String, String> segmentZKMetadataPathMap = new HashMap<>();
-    for (String segmentName : segmentNames) {
-      String segmentZKMetadataPath =
-          ZKMetadataProvider.constructPropertyStorePathForSegment(tableNameWithType, segmentName);
-      segmentZKMetadataPathMap.put(segmentName, segmentZKMetadataPath);
+  private Map<InstancePartitionsType, InstancePartitions> getInstacePartitionsMap(TableConfig tableConfig,
+      @Nullable String tierName) {
+    if (tierName != null) {
+      assert tableConfig.getTierConfigsList() != null;
+      Tier tier = TierConfigUtils.getTier(tableConfig.getTierConfigsList(), tierName);
+      InstancePartitions tieredInstancePartitions =
+          TierConfigUtils.getTieredInstancePartitions(tableConfig, tier, _helixZkManager);
+      return Map.of(InstancePartitionsType.OFFLINE, tieredInstancePartitions);
+    } else {
+      return fetchOrComputeInstancePartitions(tableConfig.getTableName(), tableConfig);
     }
-    // Assign instances for the segment and add it into IdealState
-    try {
-      TableConfig tableConfig = getTableConfig(tableNameWithType);
-      Preconditions.checkState(tableConfig != null, "Failed to find table config for table: " + tableNameWithType);
+  }
 
-      Map<InstancePartitionsType, InstancePartitions> instancePartitionsMap =
-          fetchOrComputeInstancePartitions(tableNameWithType, tableConfig);
+  // Assign a list of segments in batch mode
+  public void assignSegments(TableConfig tableConfig, Map<String, SegmentZKMetadata> segmentZKMetadataMap) {
+    String tableNameWithType = tableConfig.getTableName();
+    Set<String> segments = segmentZKMetadataMap.keySet();
+
+    try {
+      Map<InstancePartitionsType, InstancePartitions> nonTierInstancePartitionsMap;
+      Map<String, Map<InstancePartitionsType, InstancePartitions>> tierToInstancePartitionsMap;
 
       // Initialize tier information only in case direct tier assignment is configured
-      if (_enableTieredSegmentAssignment && CollectionUtils.isNotEmpty(tableConfig.getTierConfigsList())) {
-        List<Tier> sortedTiers = TierConfigUtils.getSortedTiersForStorageType(tableConfig.getTierConfigsList(),
-            TierFactory.PINOT_SERVER_STORAGE_TYPE, _helixZkManager);
-        for (String segmentName : segmentNames) {
-          // Update segment tier to support direct assignment for multiple data directories
-          updateSegmentTargetTier(tableNameWithType, segmentName, sortedTiers);
-          InstancePartitions tierInstancePartitions =
-              TierConfigUtils.getTieredInstancePartitionsForSegment(tableConfig, segmentName, sortedTiers,
-                  _helixZkManager);
-          if (tierInstancePartitions != null && TableNameBuilder.isOfflineTableResource(tableNameWithType)) {
-            // Override instance partitions for offline table
-            LOGGER.info("Overriding with tiered instance partitions: {} for segment: {} of table: {}",
-                tierInstancePartitions, segmentName, tableNameWithType);
-            instancePartitionsMap = Collections.singletonMap(InstancePartitionsType.OFFLINE, tierInstancePartitions);
-          }
+      // TODO: Support direct tier assignment for UPLOADED real-time segments
+      if (needTieredSegmentAssignment(tableConfig) && TableNameBuilder.isOfflineTableResource(tableNameWithType)) {
+        nonTierInstancePartitionsMap = null;
+        tierToInstancePartitionsMap = new HashMap<>();
+        for (Map.Entry<String, SegmentZKMetadata> entry : segmentZKMetadataMap.entrySet()) {
+          SegmentZKMetadata segmentZKMetadata = entry.getValue();
+          tierToInstancePartitionsMap.computeIfAbsent(segmentZKMetadata.getTier(),
+              k -> getInstacePartitionsMap(tableConfig, k));
         }
+      } else {
+        nonTierInstancePartitionsMap = fetchOrComputeInstancePartitions(tableNameWithType, tableConfig);
+        tierToInstancePartitionsMap = null;
       }
 
       SegmentAssignment segmentAssignment =
           SegmentAssignmentFactory.getSegmentAssignment(_helixZkManager, tableConfig, _controllerMetrics);
       long segmentAssignmentStartMs = System.currentTimeMillis();
-      Map<InstancePartitionsType, InstancePartitions> finalInstancePartitionsMap = instancePartitionsMap;
       HelixHelper.updateIdealState(_helixZkManager, tableNameWithType, idealState -> {
         assert idealState != null;
-        for (String segmentName : segmentNames) {
-          Map<String, Map<String, String>> currentAssignment = idealState.getRecord().getMapFields();
+        Map<String, Map<String, String>> currentAssignment = idealState.getRecord().getMapFields();
+        for (Map.Entry<String, SegmentZKMetadata> entry : segmentZKMetadataMap.entrySet()) {
+          String segmentName = entry.getKey();
+          SegmentZKMetadata segmentZKMetadata = entry.getValue();
           if (currentAssignment.containsKey(segmentName)) {
             LOGGER.warn("Segment: {} already exists in the IdealState for table: {}, do not update", segmentName,
                 tableNameWithType);
           } else {
+            Map<InstancePartitionsType, InstancePartitions> instancePartitionsMap;
+            if (nonTierInstancePartitionsMap != null) {
+              instancePartitionsMap = nonTierInstancePartitionsMap;
+            } else {
+              instancePartitionsMap = tierToInstancePartitionsMap.get(segmentZKMetadata.getTier());
+            }
             List<String> assignedInstances =
-                segmentAssignment.assignSegment(segmentName, currentAssignment, finalInstancePartitionsMap);
+                segmentAssignment.assignSegment(segmentName, currentAssignment, instancePartitionsMap);
             LOGGER.info("Assigning segment: {} to instances: {} for table: {}", segmentName, assignedInstances,
                 tableNameWithType);
             currentAssignment.put(segmentName,
@@ -2632,16 +2734,14 @@ public class PinotHelixResourceManager {
         }
         return idealState;
       });
-      LOGGER.info("Added {} segments: {} to IdealState for table: {} in {} ms", segmentNames.size(), segmentNames,
+      LOGGER.info("Added {} segments: {} to IdealState for table: {} in {} ms", segmentZKMetadataMap.size(), segments,
           tableNameWithType, System.currentTimeMillis() - segmentAssignmentStartMs);
     } catch (Exception e) {
       LOGGER.error(
           "Caught exception while adding segments: {} to IdealState for table: {}, deleting segments ZK metadata",
-          segmentNames, tableNameWithType, e);
-      for (Map.Entry<String, String> segmentZKMetadataPathEntry : segmentZKMetadataPathMap.entrySet()) {
-        String segmentName = segmentZKMetadataPathEntry.getKey();
-        String segmentZKMetadataPath = segmentZKMetadataPathEntry.getValue();
-        if (_propertyStore.remove(segmentZKMetadataPath, AccessOption.PERSISTENT)) {
+          segments, tableNameWithType, e);
+      for (String segmentName : segments) {
+        if (removeSegmentZKMetadata(tableNameWithType, segmentName)) {
           LOGGER.info("Deleted segment ZK metadata for segment: {} of table: {}", segmentName, tableNameWithType);
         } else {
           LOGGER.error("Failed to delete segment ZK metadata for segment: {} of table: {}", segmentName,
@@ -3119,6 +3219,27 @@ public class PinotHelixResourceManager {
     }
   }
 
+  private void sendLogicalTableConfigRefreshMessage(String logicalTableName) {
+    LogicalTableConfigRefreshMessage refreshMessage = new LogicalTableConfigRefreshMessage(logicalTableName);
+
+    // Send logical table config refresh message to brokers
+    Criteria recipientCriteria = new Criteria();
+    recipientCriteria.setRecipientInstanceType(InstanceType.PARTICIPANT);
+    recipientCriteria.setInstanceName("%");
+    recipientCriteria.setResource(Helix.BROKER_RESOURCE_INSTANCE);
+    recipientCriteria.setSessionSpecific(true);
+    recipientCriteria.setPartition(logicalTableName);
+    // Send message with no callback and infinite timeout on the recipient
+    int numMessagesSent =
+        _helixZkManager.getMessagingService().send(recipientCriteria, refreshMessage, null, -1);
+    if (numMessagesSent > 0) {
+      LOGGER.info("Sent {} logical table config refresh messages to brokers for table: {}", numMessagesSent,
+          logicalTableName);
+    } else {
+      LOGGER.warn("No logical table config refresh message sent to brokers for table: {}", logicalTableName);
+    }
+  }
+
   private void sendApplicationQpsQuotaRefreshMessage(String appName) {
     ApplicationQpsQuotaRefreshMessage message = new ApplicationQpsQuotaRefreshMessage(appName);
 
@@ -3180,6 +3301,27 @@ public class PinotHelixResourceManager {
     }
   }
 
+  private void sendTableConfigSchemaRefreshMessage(String tableNameWithType, List<String> instances) {
+    TableConfigSchemaRefreshMessage refreshMessage = new TableConfigSchemaRefreshMessage(tableNameWithType);
+    for (String instance : instances) {
+      // Send refresh message to servers
+      Criteria recipientCriteria = new Criteria();
+      recipientCriteria.setRecipientInstanceType(InstanceType.PARTICIPANT);
+      recipientCriteria.setInstanceName(instance);
+      recipientCriteria.setSessionSpecific(true);
+      ClusterMessagingService messagingService = _helixZkManager.getMessagingService();
+      // Send message with no callback and infinite timeout on the recipient
+      int numMessagesSent = messagingService.send(recipientCriteria, refreshMessage, null, -1);
+      if (numMessagesSent > 0) {
+        LOGGER.info("Sent {} schema refresh messages to servers for table: {} for instance: {}", numMessagesSent,
+            tableNameWithType, instance);
+      } else {
+        LOGGER.warn("No schema refresh message sent to servers for table: {} for instance: {}", tableNameWithType,
+            instance);
+      }
+    }
+  }
+
   /**
    * Update the instance config given the broker instance id
    */
@@ -3197,16 +3339,27 @@ public class PinotHelixResourceManager {
    * the ideal state because they are not supposed to be served.
    */
   public Map<String, List<String>> getServerToSegmentsMap(String tableNameWithType) {
-    return getServerToSegmentsMap(tableNameWithType, null);
+    return getServerToSegmentsMap(tableNameWithType, null, true);
   }
 
-  public Map<String, List<String>> getServerToSegmentsMap(String tableNameWithType, @Nullable String targetServer) {
+  public Map<String, List<String>> getServerToSegmentsMap(String tableNameWithType, @Nullable String targetServer,
+      boolean includeReplacedSegments) {
     Map<String, List<String>> serverToSegmentsMap = new TreeMap<>();
     IdealState idealState = _helixAdmin.getResourceIdealState(_helixClusterName, tableNameWithType);
     if (idealState == null) {
       throw new IllegalStateException("Ideal state does not exist for table: " + tableNameWithType);
     }
-    for (Map.Entry<String, Map<String, String>> entry : idealState.getRecord().getMapFields().entrySet()) {
+
+    Map<String, Map<String, String>> idealStateMap = idealState.getRecord().getMapFields();
+    Set<String> segments = idealStateMap.keySet();
+
+    if (!includeReplacedSegments) {
+      SegmentLineage segmentLineage = SegmentLineageAccessHelper
+          .getSegmentLineage(getPropertyStore(), tableNameWithType);
+      SegmentLineageUtils.filterSegmentsBasedOnLineageInPlace(segments, segmentLineage);
+    }
+
+    for (Map.Entry<String, Map<String, String>> entry : idealStateMap.entrySet()) {
       String segmentName = entry.getKey();
       for (Map.Entry<String, String> instanceStateEntry : entry.getValue().entrySet()) {
         String server = instanceStateEntry.getKey();
@@ -3463,7 +3616,7 @@ public class PinotHelixResourceManager {
    */
   @Nullable
   public TableConfig getOfflineTableConfig(String tableName) {
-    return getOfflineTableConfig(tableName, true);
+    return getOfflineTableConfig(tableName, true, true);
   }
 
   /**
@@ -3471,11 +3624,12 @@ public class PinotHelixResourceManager {
    *
    * @param tableName Table name with or without type suffix
    * @param replaceVariables Whether to replace environment variables and system properties with their actual values
+   * @param applyDecorator Whether to apply decorator to the table config
    * @return Table config
    */
   @Nullable
-  public TableConfig getOfflineTableConfig(String tableName, boolean replaceVariables) {
-    return ZKMetadataProvider.getOfflineTableConfig(_propertyStore, tableName, replaceVariables);
+  public TableConfig getOfflineTableConfig(String tableName, boolean replaceVariables, boolean applyDecorator) {
+    return ZKMetadataProvider.getOfflineTableConfig(_propertyStore, tableName, replaceVariables, applyDecorator);
   }
 
   /**
@@ -3487,7 +3641,7 @@ public class PinotHelixResourceManager {
    */
   @Nullable
   public TableConfig getRealtimeTableConfig(String tableName) {
-    return getRealtimeTableConfig(tableName, true);
+    return getRealtimeTableConfig(tableName, true, true);
   }
 
   /**
@@ -3495,11 +3649,12 @@ public class PinotHelixResourceManager {
    *
    * @param tableName Table name with or without type suffix
    * @param replaceVariables Whether to replace environment variables and system properties with their actual values
+   * @param applyDecorator Whether to apply decorator to the table config
    * @return Table config
    */
   @Nullable
-  public TableConfig getRealtimeTableConfig(String tableName, boolean replaceVariables) {
-    return ZKMetadataProvider.getRealtimeTableConfig(_propertyStore, tableName, replaceVariables);
+  public TableConfig getRealtimeTableConfig(String tableName, boolean replaceVariables, boolean applyDecorator) {
+    return ZKMetadataProvider.getRealtimeTableConfig(_propertyStore, tableName, replaceVariables, applyDecorator);
   }
 
   /**
@@ -3750,21 +3905,32 @@ public class PinotHelixResourceManager {
     return tableRebalancer.rebalance(tableConfig, rebalanceConfig, rebalanceJobId, tierToSegmentsMap);
   }
 
-  /**
-   * Calculate the target tier the segment belongs to and set it in segment ZK metadata as goal state, which can be
-   * checked by servers when loading the segment to put it onto the target storage tier.
-   */
+  /// Calculates the target tier for the segments within a table, updates the segment ZK metadata and persists the
+  /// update to ZK.
   @VisibleForTesting
   Map<String, Set<String>> updateTargetTier(String rebalanceJobId, String tableNameWithType, TableConfig tableConfig) {
-    List<TierConfig> tierCfgs = tableConfig.getTierConfigsList();
     List<Tier> sortedTiers =
-        CollectionUtils.isNotEmpty(tierCfgs) ? TierConfigUtils.getSortedTiersForStorageType(tierCfgs,
-            TierFactory.PINOT_SERVER_STORAGE_TYPE, _helixZkManager) : Collections.emptyList();
+        CollectionUtils.isNotEmpty(tableConfig.getTierConfigsList()) ? getSortedTiers(tableConfig) : List.of();
     LOGGER.info("For rebalanceId: {}, updating target tiers for segments of table: {} with tierConfigs: {}",
         rebalanceJobId, tableNameWithType, sortedTiers);
     Map<String, Set<String>> tierToSegmentsMap = new HashMap<>();
     for (String segmentName : getSegmentsFor(tableNameWithType, true)) {
-      String tier = updateSegmentTargetTier(tableNameWithType, segmentName, sortedTiers);
+      ZNRecord segmentMetadataZNRecord = getSegmentMetadataZnRecord(tableNameWithType, segmentName);
+      if (segmentMetadataZNRecord == null) {
+        LOGGER.warn("Failed to find ZK metadata for segment: {} of table: {}, skipping updating target tier",
+            segmentName, tableNameWithType);
+        continue;
+      }
+      SegmentZKMetadata segmentZKMetadata = new SegmentZKMetadata(segmentMetadataZNRecord);
+      String tier = segmentZKMetadata.getTier();
+      if (updateSegmentTargetTier(tableNameWithType, segmentZKMetadata, sortedTiers)) {
+        if (updateZkMetadata(tableNameWithType, segmentZKMetadata, segmentMetadataZNRecord.getVersion())) {
+          tier = segmentZKMetadata.getTier();
+        } else {
+          LOGGER.warn("Failed to persist ZK metadata for segment: {} of table: {} because of version change, skipping "
+              + "updating target tier", segmentName, tableNameWithType);
+        }
+      }
       if (tier != null) {
         tierToSegmentsMap.computeIfAbsent(tier, t -> new HashSet<>()).add(segmentName);
       }
@@ -3772,41 +3938,38 @@ public class PinotHelixResourceManager {
     return tierToSegmentsMap;
   }
 
-  private String updateSegmentTargetTier(String tableNameWithType, String segmentName, List<Tier> sortedTiers) {
-    ZNRecord segmentMetadataZNRecord = getSegmentMetadataZnRecord(tableNameWithType, segmentName);
-    if (segmentMetadataZNRecord == null) {
-      LOGGER.debug("No ZK metadata for segment: {} of table: {}", segmentName, tableNameWithType);
-      return null;
-    }
+  /// Calculates the target tier for the segment and set it into the segment ZK metadata. Returns `true` if the segment
+  /// ZK metadata is updated, `false` otherwise. This method does NOT persist the segment ZK metadata update to ZK.
+  public boolean updateSegmentTargetTier(String tableNameWithType, SegmentZKMetadata segmentZKMetadata,
+      List<Tier> sortedTiers) {
+    String segmentName = segmentZKMetadata.getSegmentName();
     Tier targetTier = null;
     for (Tier tier : sortedTiers) {
       TierSegmentSelector tierSegmentSelector = tier.getSegmentSelector();
-      if (tierSegmentSelector.selectSegment(tableNameWithType, segmentName)) {
+      if (tierSegmentSelector.selectSegment(tableNameWithType, segmentZKMetadata)) {
         targetTier = tier;
         break;
       }
     }
-    SegmentZKMetadata segmentZKMetadata = new SegmentZKMetadata(segmentMetadataZNRecord);
-    String targetTierName = null;
     if (targetTier == null) {
       if (segmentZKMetadata.getTier() == null) {
         LOGGER.debug("Segment: {} of table: {} is already set to go to default tier", segmentName, tableNameWithType);
-        return null;
+        return false;
       }
       LOGGER.info("Segment: {} of table: {} is put back on default tier", segmentName, tableNameWithType);
+      segmentZKMetadata.setTier(null);
+      return true;
     } else {
-      targetTierName = targetTier.getName();
+      String targetTierName = targetTier.getName();
       if (targetTierName.equals(segmentZKMetadata.getTier())) {
         LOGGER.debug("Segment: {} of table: {} is already set to go to target tier: {}", segmentName, tableNameWithType,
             targetTierName);
-        return targetTierName;
+        return false;
       }
       LOGGER.info("Segment: {} of table: {} is put onto new tier: {}", segmentName, tableNameWithType, targetTierName);
+      segmentZKMetadata.setTier(targetTierName);
+      return true;
     }
-    // Update the tier in segment ZK metadata and write it back to ZK.
-    segmentZKMetadata.setTier(targetTierName);
-    updateZkMetadata(tableNameWithType, segmentZKMetadata, segmentMetadataZNRecord.getVersion());
-    return targetTierName;
   }
 
   /**
